# ohsumbot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: deploy.yml
src/: consts.rs  db.rs  main.rs  openai.rs  telegram.rs
src/openai/: api.rs  mod.rs  processor.rs
