[package]
name = "ohsumbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers"}
grammers-session = {git = "https://github.com/Lonami/grammers"}
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "signal"] }
log = "0.4.14"
env_logger = "0.10"
rusqlite = { version = "0.30.0"}
envy = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
openai-api-rs = "2.1.5"
dotenv = "0.15.0"